Ts mt text overlap issue (#306)
* fix text overlap issue

* fix spacing issue

* fix spacing issue

* fix spacing issue

* fix spacing issue

* resolve merge conflict

--- a/assets/section-pdp.css
+++ b/assets/section-pdp.css
@@ -65,7 +65,13 @@
     display: flex;
     flex-direction: column;
     gap: var(--gap);
-    margin-bottom: -8px;
+    margin-bottom: -2px;
+}
+
+@media (max-width: 900px) {
+    .pdp__variants {
+        margin-bottom: 0;
+    }
 }
 
 .pdp__variant-buttons {
@@ -522,6 +528,12 @@
     gap: 5px;
     align-items: baseline;
     font-size: 14px;
+}
+
+@media (min-width: 901px) {
+    .pdp__stock--active {
+        margin-bottom: -8px;
+    }
 }
 
 p.pdp__stock-variant {
